--- a/ProyectoWeb2/style.css
+++ b/ProyectoWeb2/style.css
@@ -134,7 +134,6 @@ nav {
     height: 400px;
     margin: 0 auto;
     box-shadow: 2px 2px 5px white;
-    background-image: url("fondo.png");
     border-radius: 15px;
     font-family: ´Open Sans´;
     padding-left: 10px;
@@ -173,8 +172,54 @@ h3{
     height:700px;
     margin:0 auto;
     box-shadow: 2px 2px 5px white;
-    background-image:url("fondo.png");
     background-size:100% 100%;
     border-radius:15px;
     padding-left:10px;
 }
+#form2 {
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+    #form12 input {
+        width: 90%;
+        height: 30px;
+        margin: 0.5rem;
+    }
+
+    #form2 button {
+        padding: 0.5em 1em;
+        border: none;
+        background: rgb(100, 200, 255);
+        cursor: pointer;
+    }
+
+#form3 {
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+    #form3 input {
+        width: 90%;
+        height: 30px;
+        margin: 0.5rem;
+    }
+
+
+
+    #form3 button {
+        padding: 0.5em 1em;
+        border: none;
+        background: rgb(100, 200, 255);
+        cursor: pointer;
+    }
